--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<img src="/static/bean.png" id="bean" width="60px">
-	<h1> COOLBEANS </h1>
+	<h1> coolbeans </h1>
 	<div id="description"> Give recommendations to your friends, or find recommendations sent by friends.</div>
 	<div id="nav">
 		<ul>
@@ -26,19 +26,19 @@
 	#description {
 		font-family: 'Open Sans', sans-serif;
 		color: white;
-		font-size: 80%;
+		font-size: 150%;
 	}
 
 	#bean {
 		position: relative;
 		top: 66px;
-		right: -10px;
+		right: 10px;
 	}
 
 	h1 {
 		font-size: 400%;
 		margin-bottom: 7%;
-		font-weight: 400;
+		font-weight: 100;
 		color: white;
 	}
 
