--- a/landing.html
+++ b/landing.html
@@ -19,14 +19,16 @@
 		#bean {
 			position: relative;
 			top: 66px;
-			right: -12px;
+			right: 10px;
 		}
 		.tagline {
-			font-size: 150%;
+			font-size: 200%;
 		}
 		h1 {
 			font-size: 400%;
 			margin-bottom:0px;
+			font-weight: 100;
+			padding-bottom: 20px;
 		}
 		form {
 			font-size: 70%;
@@ -65,7 +67,7 @@
 		<div class="flash">{{message}}</div>
 	{% endif %}
 	<img src="/static/bean.png" id="bean" width="60px">
-	<h1> COOLBEANS </h1>
+	<h1> coolbeans </h1>
 	<div class="tagline"> Helping users and small businesses leverage word of month. </div>
 	<img src="/static/heroshot.png" id="heroshot">
 	<form method="post">
